--- a/project/templates/flatpages/default.html
+++ b/project/templates/flatpages/default.html
@@ -34,7 +34,7 @@
                                <a class="nav-link" href="/about/">About</a>
                            </li>
                            <li class="nav-item">
-                               <a class="nav-link" href="/about/">Test</a>
+                               <a class="nav-link" href="/test/">Test</a>
                            </li>
                            <li class="nav-item">
                                <a class="nav-link" href="/contacts/">Contact</a>
