--- a/project/templates/flatpages/contact_page2.html
+++ b/project/templates/flatpages/contact_page2.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>{{ flatpage.title }}</title>
-</head>
-<body>
+{% extends 'flatpages/default.html' %}
+{% block title %}
+
+{{ flatpage.title }}
+
     {{ flatpage.content }}
     {{ flatpage.content }}
-</body>
-</html>
+{% endblock title %}
+
+{% block content %}
+    <h2>{{ flatpage.title }}</h2>
+    <hr>
+    <h3>Наши контакты:</h3>
+{{ flatpage.content }}
+{% endblock content %}
